--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 </head>
 <body>
 <header>
-   <div class="BG Beach">
-   <img src="Images/Beach.png" alt="Beach.png"/>
-        <div class="travel">
+   <div class="travel">
             <nav>
                 <div class="logo">Bon Voyage</div>
                 <ul>
@@ -30,19 +28,19 @@
                         <a href="" target="blank">Bookings</a>
                     </li>
                     <li>
-                       <a href="" target="blank" class="btn-Orange">Login</a> 
+                      <button><a href="" target="blank" class="btnOrange">Login</a> </button> 
                     </li>
                     <li>
-                        <a href="" target="blank" class="btn-Orange1">Sign up</a> 
+                       <button> <a href="" target="blank" class="btnOrange1">Sign up</a> </button>
                      </li>
                 </ul>
             </nav>
         </div>
-        <div class="left">
+        <div class="left center">
         <h1>Travel, enjoy and   live a new and full life </h1>
         <h3>Best Destinations around the world</h3>
-        <a href="" target="_blank" class="btn-Blueviolet">Find out more</a>
-        </div>   
+        <button type="button" onclick="" target="blank" class="btnBlueviolet">Find out more</a></button>
+        
     </div>
     </header>
     
