--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="left center">
+        <div class="textarea">
         <h1>Travel, enjoy and   live a new and full life </h1>
         <h3>Best Destinations around the world</h3>
         <button type="button" onclick="" target="blank" class="btnBlueviolet">Find out more</a></button>
