--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
 </head>
 <body>
 <header>
-    <div class="beachlogo">
-    <img src="Images/Beach.png", lightgray 50% , cover no-repeat;>
-    </div>
             <nav>
                 <div class="logo">
                     <a>Bon Voyage</a>
@@ -33,21 +30,20 @@
                         <a href="#" target="blank">Bookings</a>
                     </li>
                     <li>
-                      <a href="#" target="blank" class="btn Orange">Login</a> 
+                      <a href="#" target="blank" class="btnOrange">Login</a> 
                     </li>
                     <li>
-                       <a href="#" target="blank" class="btn Orange">Sign up</a>
+                       <a href="#" target="blank" class="btnOrange">Sign up</a>
                      </li>
                 </ul>
             </div>
             </nav>
             <!-- End of navigation part-->
-        <!--body section-->
         <!--left side-->
         <div class="textarea">
         <h1>Travel, enjoy and   live a new and full life </h1>
         <h3>Best Destinations around the world</h3>
-        <a href="#" onclick="" target="blank" class="btn Blueviolet">Find out more</a>
+        <a href="#" target="blank" class="btnBlueviolet">Find out more</a>
         </div>
     </header>
     <!-- category section starts here-->
@@ -59,15 +55,22 @@
         <div class="category-row-icons">
             <div class="antenna">
                 <div class="antenna-content">
-                    <img src="Images/antenna.png"  width="107.902px" 
-                    height="97.762px" alt="antenna.png">
+                    <img src="Images/antenna.svg"  width="107.902px" 
+                    height="97.762px" alt="antenna.svg">
                     <h3>Calculated Weather </h3>
-                    <h4>As much of information possible with the weather</h4>
+                    <p>As much of <br>information possible <br>with the weather</p>
                 </div>
             </div>
             <div class="flight">
+                <span class="Flighticon">
+                    <img src="Images/flightbackground.svg" width="313.15px" height="393.544px" alt="flightbackground.svg">
+                    <img src="Images/flight.svg" width="254.334px" height="191.423px" transform="rotate(-22.33deg)" flex-shrink="0" alt="flight.svg">
+                    <img src="Images/flightnear.svg" width="58.642px" height="61.413px" flex-shrink="0" alt="flightnear.svg">
+                    <img src="Images/flightbgdown.svg" width="58.642px"  height="61.413px" flex-shrink="0" alt="flightbgdown.svg">
+                    </span>
                 <div class="flight-content">
-                    
+                   <h3>Best Flights</h3>
+                    <p>Getting cheap best<br/>flights </p>
                 </div>
             </div>
 
