--- a/index.html
+++ b/index.html
@@ -271,26 +271,26 @@
             </div>
             <div class="choose-cards">
               <div class="choose-content">
-                <span class="radious-color blues-circle"></span>
-                <img src="./img/star.svg" alt="" srcset="" />
+                <span class="bg-circle blue-circle"></span>
+                <img src="./Images/star.svg" alt="star.svg"  />
                 <h1>Handpicked Hotels</h1>
                 <p>
                   lorem ipsum dolor sit amet, consect adipiscing elit. Aenean
                   commodo ligula eget dolor. Aenean massa
                 </p>
               </div>
-              <div class="choose-card">
-                <span class="radious-color yellow-circle"> </span>
-                <img src="./img/globle.svg" alt="" srcset="" />
+              <div class="choose-content">
+                <span class="bg-color yellow-circle"> </span>
+                <img src="./Images/world.svg" alt="world.svg"  />
                 <h1>World Class Service</h1>
                 <p>
                   lorem ipsum dolor sit amet, consect adipiscing elit. Aenean
                   commodo ligula eget dolor. Aenean massa
                 </p>
               </div>
-              <div class="choose-card">
-                <span class="radious-color orange-circle"></span>
-                <img src="./img/thumsUp.svg" alt="" srcset="" />
+              <div class="choose-content">
+                <span class="bg-color orange-circle"></span>
+                <img src="./Images/thumps up.svg" alt="thumps up.svg" />
                 <h1>Best Price Guarantee</h1>
                 <p>
                   lorem ipsum dolor sit amet, consect adipiscing elit. Aenean
@@ -298,9 +298,86 @@
                 </p>
               </div>
             </div>
+    </section4>
+
+    <section5>
+        <div class="emailform-container">
+            <div class="emailform-content">
+              <h2>
+                Subscribe to get information, latest news and other interesting
+                offers at Bon Voyage
+              </h2>
+              <form class="email">
+                <label for="email">
+                  <img src="./Images/email icon.svg" alt="email icon" />
+                  <p>Your email</p>
+                </label>
+                <input type="email" name="email" id="email" />
+                <input type="button" class="sub-button" value="Subscribe" />
+              </form>
+              <img src="./Images/send icon.svg" alt="send icon" />
+            </div>
+          </div>
+    </section>
+    <!--last page-->
+ <footer>
+    <div class="footer-content">
+        <p>
+            Book your trip in minute.get full <br />
+            control for much longer.
+          </p>
+          <div class="table">
+            <div class="company-content">
+              <h1>Company</h1>
+              <span>
+                <p>About</p>
+                <p>Careers</p>
+                <p>Mobile</p>
+              </span>
+            </div>
+            <div class="contact-content">
+              <h1>Contact</h1>
+              <span>
+                <p>Help/FAQ</p>
+                <p>Airlinefees</p>
+                <p>Affilates</p>
+              </span>
+            </div>
+            <div class="more-content">
+              <h1>More</h1>
+              <span>
+                <p>Airlinefees</p>
+                <p>Airline</p>
+                <p>Low fare tips</p>
+              </span>
+            </div>
+          </div>
+          <div class="discover our app">
+            <div class="app-icons">
+              <img src="./Images/facebook-icon.svg" alt="facebook-icon.svg"  />
+              <span>
+                <img src="./Images/instagram-bg-icon.png" alt="instagram-bg-icon.png" />
+                <img src="./Images/instagram-icon.svg" class="insta-icon" alt="instagram-icon"/>
+              </span>
+              <img src="./Images/twitter icon.svg" alt="twitter icon.svg" />
+            </div>
+            <h2>Discover our app</h2>
+            <div class="playstore-button">
+              <div class="google-playstore">
+                <img class="logo"src="./Images/google-play-icon.svg" alt="google-play-icon.svg"/>
+                <img class="text" src="./Images/google-play-text.svg" alt="google-play-text.svg"/>
+              </div>
+              <div class="apple-playstore">
+                <img src="./Images/appleplaystore-icon.svg" alt="appleplaystore-icon.svg"  />
+              </div>
+            </div>
+          </div>  
+          
+          <div class="copy-rights">
+            <p>All rights reserved@bonvoyage.co</p>
+
           </div>
 
-    </section4>
-    
+ </footer>
 </body>
 </html>
