--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   <h2>Best Flights</h2>
                   <p>Getting cheap best flights</p>
                 </div>
-                <div class="boder-orange"></div>
+                <div class="orange-border"></div>
               </div>
              <!--mic-->
              <div class="card-col">
@@ -352,7 +352,7 @@
               </span>
             </div>
           </div>
-          <div class="discover our app">
+          <div class="discover-our-app">
             <div class="app-icons">
               <img src="./Images/facebook-icon.svg" alt="facebook-icon.svg"  />
               <span>
