--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
      <a href="#" target="blank" class="btnBlueviolet">Find out more</a>
         </div>
     </header>
+    <main>
     <!-- category section -->
     <section1> 
         <div class="category">
@@ -271,7 +272,7 @@
             </div>
             <div class="choose-cards">
               <div class="choose-content">
-                <span class="bg-circle blue-circle"></span>
+                <span class="radious-circle blue-circle"></span>
                 <img src="./Images/star.svg" alt="star.svg"  />
                 <h1>Handpicked Hotels</h1>
                 <p>
@@ -280,7 +281,7 @@
                 </p>
               </div>
               <div class="choose-content">
-                <span class="bg-color yellow-circle"> </span>
+                <span class="radious-color yellow-circle"> </span>
                 <img src="./Images/world.svg" alt="world.svg"  />
                 <h1>World Class Service</h1>
                 <p>
@@ -289,7 +290,7 @@
                 </p>
               </div>
               <div class="choose-content">
-                <span class="bg-color orange-circle"></span>
+                <span class="radious-color orange-circle"></span>
                 <img src="./Images/thumps up.svg" alt="thumps up.svg" />
                 <h1>Best Price Guarantee</h1>
                 <p>
@@ -319,6 +320,7 @@
             </div>
           </div>
     </section>
+  </main>
     <!--last page-->
  <footer>
     <div class="footer-content">
