--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
         <div class="TopSelling">
             <p>Top Selling</p>
             <h1>Top Destinations</h1>
-        <div class="TopSelling-row-icons">
+        <div class="row-cards">
             <!--rome-->
-            <div class="card-img">
+            <div class="card-colom">
                 <div class="image">
-            <img src="./Images/italy.png"  alt="italy.png"/>
+            <img src="./Images/italy.png" class="italy" alt="italy.png"/>
         </div>
          <div class="place-content">
         <span>
@@ -126,9 +126,9 @@
         </div> 
         </div>
         <!--london-->
-        <div class="card-img">
+        <div class="card-colom">
             <div class="image">
-            <img src="./Images/london.png" width="417.658px" height="607.866px" flex-shrink="0" >
+            <img src="./Images/london.png"class="london" alt="london.png"/>
         </div>
             <div class="place-content">
                 <span><p>London, UK</p>
@@ -138,9 +138,9 @@
             
         </div> 
         <!--Europe-->
-        <div class="card-img">
+        <div class="card-colom">
             <div class="image">
-            <img src="./Images/europe.png" width="417.658px" height="607.866px" flex-shrink="0" >
+            <img src="./Images/europe.png" class="europe" alt="europe.png">
             </div>
             <div class="place-content">
                 <span><p>Full Europe</p>
